# yoxel-voxel

./: ProjectHome.md  build.sh  gen_coral.py  gen_largevol.py  gen_spheres.py  grid_gen.py  qtview.py  scene_gen.py  trace_cuda.py  yoxel-voxel.sln
article/: main.tex  voxel.kilepr
article/cell/: main.odt  tree-rays.odg
axis/: cam.py
bittree/: bittree.h  bittree.sln  cu_matrix.h  main.cpp  stdafx.h  test.py  trace.cu  trace.py
branches/cell_contest/: build.sh  qtview.py  trace_cuda.py
branches/lagacy/: gen_coral.py  scene_gen.py
branches/ssna/: scene_gen.py
cell/: Makefile  alignedarray.h  cell.vcproj  data.h  main.cpp  ppu_renderer.cpp  renderer_base.h  shader.h  simple_renderer.cpp  spu_renderer.cpp  svodata.h  svorenderer.h  threaded_renderer.cpp  trace.c_
cell/spu/: Makefile  trace_spu.cpp  trace_spu.h
cpp/: CudaSVO_rt.cpp  CudaSVO_rt.h  DeviceBuf.h  DynamicSVO.cpp  HomoStorage.h  VoxelSource.h  builders.h  cu_cpp.h  cu_cu.h  packed_color.h  packed_normal.h  point.h  points.h  ptx.cmd  ray_gen.h  stdafx.h  trace.cu  trace_cu.h  trace_utils.h  utils.h  vox_node.h
cpp/common/: no_deduce.h
cpp/geometry/: xmath.h
crowd2/: crowd_cpp.pyx  crowd_cpp.pyxdep  t.pyx  t.pyxbld  test_gl.py  test_pathfield.py  tt.py  vo_model.pyxbld  zgl2.py
crowd2/RVOServer/: CMakeLists.txt  RVOServer.h  common.h  main.cpp  numpy_boost.hpp  path_field.cpp  path_field.h  stdafx.h
crowd2/data/: vo_contours.txt
data/: scene.zip.002  scene.zip.004
demo/: Demo.cpp  Demo.h  SVORenderer.cpp  SVORenderer.h  cu_cpp.h  demo.vcproj  main.cpp
freeglut/lib/: freeglut.lib
growth_test/: growth_test.sln  growth_test.vcproj  main.cpp
nest/: nest.sln
nest/include/: array_3d.h  utils.h
nest/nest/: VoxelScene.h  main.cpp  nest.vcproj  ntree.h  ntree_test.cpp  ntree_tree.h  ntree_view.h  offset_geom.h  offset_test.cpp  scene.h  stdafx.h
ntree/: BrickManager.h  main.cpp  ntree.vcproj  ntree_trace.cu  ntree_trace.cuh  scene.cpp  scene.h  stdafx.h
opencv_soc/: affine.py  coherence.py  common.py  lens.py  lsd.py  match.py  pair.py  track.py
ore/: ore.py
pycuda/: driver.py
reaction/: cells.cg  cells.py  cmesh.pyx  coral.py  coral_view.py  cutools.py  demo.py  diffusion.py  dxtgpu.py  explode.py  flow.py  flow_paint.py  fractal.py  height_occlusion.py  ice.py  lapgrow.py  mandel.py  mars.py  mesh.py  paint.py  perlin.cg  perlin.py  splash.py  t.py  virtex.py  volume.py  volvis.py  voxelizer.py  vtex.cg  vtex.cgh  vtex.py  vtexFeedback.cg  wxgl.py  zgl.py
talk/: slides.txt
trunk/: bonsai.py  gen_largevol.py  qtview.py  render.py  scene_gen.py  simple_gen.py  trace_cpu.py  trace_cuda.py  yoxel-voxel.sln
trunk/crowd2/RVOServer/: CMakeLists.txt  common.h  main.cpp  path_field.cpp  path_field.h  stdafx.h
utils/: nvcc_debug.cmd  nvcc_emurelease.cmd  nvcc_release.cmd
wiki/: Rodamap.wiki
(+382 files in other folders)
